# tbs-core

./: .gitignore  Cargo.toml  README.md
config/units/: units.csv
configs/: test.ods
configs/default/: .~lock.units.csv#  attack_powered.csv  attack_splash.csv  attack_types.csv  commander_attributes.csv  commander_powers.csv  commanders.csv  custom_actions.csv  default.ods  effects.csv  global_events.csv  hero_powers.csv  heroes.csv  movement.csv  movement_types.csv  ruleset.csv  tags.csv  terrain.csv  terrain_attributes.csv  terrain_build.csv  terrain_build_repair.csv  terrain_defense.csv  terrain_powered.csv  tokens.csv  unit_attacks.csv  unit_attributes.csv  unit_damage.csv  unit_heroes.csv  unit_powered.csv  unit_status.csv  unit_transport.csv  units.csv
configs/default_test/: attack_powered.csv  attack_splash.csv  attack_types.csv  commander_attributes.csv  commander_powers.csv  commanders.csv  custom_actions.csv  effects.csv  global_events.csv  hero_powers.csv  heroes.csv  movement.csv  ruleset.csv  sub_mt_Marine.csv  tables.csv  tags.csv  terrain.csv  terrain_attributes.csv  terrain_build.csv  terrain_build_repair.csv  terrain_defense.csv  terrain_powered.csv  terrain_tags.csv  test.ods  token_tags.csv  tokens.csv  unit_attributes.csv  unit_damage.csv  unit_heroes.csv  unit_powered.csv  unit_status.csv  unit_tags.csv  unit_transport.csv  units.csv
src/: commanders.rs  details.rs  field_modifiers.rs  game.rs  handle.rs  lib.rs  map.rs  player.rs  tags.rs  terrain.rs  units.rs
src/combat/: attack.rs  attack_pattern.rs  mod.rs  rhai_combat.rs  splash_damage.rs  test.rs
src/commander/: commander_type.rs  mod.rs  rhai_commander.rs  test.rs
src/config/: attack_config.rs  attack_powered.rs  commander_power_config.rs  commander_type_config.rs  commander_unit_config.rs  config.rs  custom_action_config.rs  editor_tag_config.rs  effect_config.rs  environment.rs  file_loader.rs  global_events.rs  hero_power_config.rs  hero_type_config.rs  mod.rs  movement_type_config.rs  number_modification.rs  parse.rs  table_config.rs  tag_config.rs  terrain_powered.rs  terrain_type_config.rs  token_filter.rs  token_typ_config.rs  unit_filter.rs  unit_type_config.rs
src/details/: mod.rs  rhai_details.rs
src/game/: commands.rs  event_fx.rs  event_handler.rs  events.rs  fog.rs  game.rs  game_view.rs  mod.rs  modified_view.rs  movement_planner.rs  rhai_board.rs  rhai_event_handler.rs  settings.rs  test.rs
src/map/: board.rs  direction.rs  (+11 more)
(+129 files in other folders)
