[package]
name = "tanktics-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rendering = ["interfaces/preview"]
tracing = ["dep:tracing"]

[dependencies]
rustc-hash = "1.1"
interfaces = { git = "https://github.com/stratecide/tbs-interfaces.git" }
zipper = { git = "https://github.com/stratecide/zipper.git", features = ["debug"] }
zipper_derive = { git = "https://github.com/stratecide/zipper.git" }
semver = "1.0"
csv = "1.3"
num-rational = { version = "0.4", features = ["serde"] }
rhai = { version = "1.19", default-features = false, features = ["std", "sync", "only_i32", "no_float", "no_custom_syntax"] }
tracing = { version = "0.1", optional = true }
